[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
exec = { path = "../exec" }
tonic = "0.12.3"
prost = "*"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "*"
